--- a/svcs.css
+++ b/svcs.css
@@ -205,6 +205,7 @@ width: 40vh;
 border-radius: 10px;
 }
 
+/*
  .gdbox img:hover {
     border: 2px solid var(--main-color);
     border-radius: 10px;
@@ -247,6 +248,8 @@ border-radius: 10px;
 .gdbox:hover .gd-btn a{
     opacity: 1;
   }
+
+  */
 
 
 /* ---------- Video Editing ---------- */
