--- a/style.css
+++ b/style.css
@@ -742,11 +742,6 @@ span {
 }
 
 @media (max-width: 617px) {
-    /* .master-cont {
-        width: 100%;
-        margin: 0 auto;
-        padding: 20px;
-    } */
 
     .portfolio-container {
         grid-template-columns: 1fr;
@@ -899,15 +894,38 @@ span {
 @media (max-width: 365px)  {
     .home-content {
         text-align: center;
+        padding: 0 20px;
     }
 
     .home-content p {
-        font-size: 1rem;
+        font-size: 1.3rem;
+    }
+
+    .home-content h3 {
+        font-size: 20px;
+        line-height: 15px;
     }
 
     .home-img img {
         width: 95vw;
         padding-top: 0;
+    }
+
+    .masterpiece {
+        padding: 0;
+    }
+
+    .master-cont h2 {
+        padding-bottom: 50px;
+        margin: 0;
+    }
+
+    .about {
+        padding: 20px;
+    }
+
+    .about-content h2, h3 {
+        text-align: center;
     }
 
     .about-img img {
